Fix width misalignment when hovering snapshots

--- a/app/sass/modules/snapshot.scss
+++ b/app/sass/modules/snapshot.scss
@@ -10,6 +10,7 @@ $transitionTime: 0.25s;
     .snapshot-info {
       border-top: 1px solid transparent;
       height: calc(100% - 80px);
+      width: calc(100% - 80px);
       padding: 40px;
       background: rgba(37,49,62,0.9);
       top: 0;
